discussion/kv_engine/174391/174391_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51914: Set a max limit on #connections to a bucket

Only allow external clients to select a bucket if the total
number of connections bound to the limit is lower than 600.

Change-Id: Ife4a37bd2e34f7a8e0574145730797a068539ece

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-05-02 14:13:57.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-02 14:52:27.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38506/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/select_bucket_executor.cc:55:13:
error: use of undeclared identifier "isServerlessDeployment"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38506/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17226/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/select_bucket_executor.cc:55:13: error: use of undeclared identifier "isServerlessDeployment" [clang-diagnostic-error]
        if (isServerlessDeployment() && !connection.isInternal()) {
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17226/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/select_bucket_executor.cc:55:13:
error: use of undeclared identifier "isServerlessDeployment" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17226/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45848/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [75/160]: disk>RAM update paged-out...E0502 07:28:20.400977 171372 NotificationQueue.h:555] [NotificationQueue] Unexpected state while draining signals: signal_=1 bytes_read=0
(8 ms) SKIPPED


99% tests passed, 1 tests failed out of 428

Total Test time (real) = 678.80 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45848/ )

Timeout of a CTest test 428/428 Test #279: ep_testsuite.ephemeral.comp_active ......................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45848/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19317/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-05-02T14:21:13.588Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-05-02T14:21:13.588Z] Expected equality of these values:
[2022-05-02T14:21:13.588Z]   100
[2022-05-02T14:21:13.588Z]   getRRPercent(*store->getVBucket(vbid))
[2022-05-02T14:21:13.588Z]     Which is: 95
[2022-05-02T14:21:13.588Z] vb:0 not fully resident after eviction
[2022-05-02T14:21:13.588Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-05-02T14:21:13.588Z] Expected equality of these values:
[2022-05-02T14:21:13.588Z]   100
[2022-05-02T14:21:13.588Z]   getRRPercent(*store->getVBucket(vbid))
[2022-05-02T14:21:13.588Z]     Which is: 97
[2022-05-02T14:21:13.588Z] vb:1 not fully resident after eviction
[2022-05-02T14:21:13.588Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (1088 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19317/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18979/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18979/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16188/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27384/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18144/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6929/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6837/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20008/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
